--- a/css/fs-gal.css
+++ b/css/fs-gal.css
@@ -13,11 +13,22 @@ body{background:radial-gradient(gray 10%,black);}
 #header{
   width:100%;
   height:200px;
-  background-image:url(../images/nat.jpg);   
+  background-image:url(../images/IMG_0472_small.jpg);   
   background-repeat:no-repeat;
   background-position:center;
   border:solid 3px white;
 
+}
+#header h1{
+  font-size: 48px;
+  color:rgba(255,255,255,1);
+  text-decoration: underline;
+  text-align: right;
+  margin: 0px;
+  padding-right: 20px;
+  letter-spacing: 2px;
+   text-shadow: 2px 2px 3px orange;
+   font-family:Times New Roman, sans-serif;
 }
 #menu, #menu ul {/* Reset the default ul styles */
     margin:0;
@@ -95,7 +106,7 @@ border-right: solid 1px gray;
 
 .slide{
     float:left;width:100%;
-    background-color: black;color: white;
+    background-color:none;color: white;
     display:block;
     padding: auto;
     margin: auto;
@@ -104,15 +115,19 @@ border-right: solid 1px gray;
 
   
 }
-.slide img{
-  border:solid 1px;
-}
- .slide p{
 
-float: right;margin:0px;text-align:center;
+.slide p{
+
+float:right;
+margin:2px;
+padding:auto;
+padding-top: 1px;
+background-color:rgba(0,0,0,.2);
+border:solid 2px rgba(0,0,0,.2);
+border-radius: 1px;
+
  }
 
- 
 .list{
   margin:0px;
   padding:0px;
@@ -121,9 +136,9 @@ float: right;margin:0px;text-align:center;
   float: left;
   display: inline-block;
   width:24%;
-  background-color: blue;
+  background-color:rgba(0,0,0,.2);
   margin:5px;
-  height:300px;
+  height:250px;
  
     
 }
@@ -191,10 +206,11 @@ border-color: white;
   line-height: 73px;
   overflow: hidden;
   background: rgba(0, 0, 0, 0.7);
-  color: #fff;
-  font-weight:300;
-  font-size: 26px; 
-  border-radius: 2px;
+  color:rgb(255,229,204);
+  font-family: "Times New Roman", Times, serif;
+  font-weight:lighter;
+  font-size: 35px; 
+  letter-spacing:.2px;
 }
 .fs-gal-prev, .fs-gal-next, .fs-gal-close {
   position: absolute;
